# fx-forward-risk-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: cli.py  streamlit_app.py
src/fm_toolkit/: __init__.py  curves.py  fx_forwards.py  marketdata.py  report.py  risk.py  scenarios.py  swaps.py
src/ing_fm/: __init__.py  curves.py  fx_forwards.py  report.py  scenarios.py
tests/: test_fx_forwards.py  test_marketdata.py  test_report.py  test_scenarios.py  test_swaps.py
