[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ing-fm"
version = "0.1.0"
description = "ING FM demo pricing and risk toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
app = [
  "streamlit>=1.32",
]
dev = [
  "pytest>=8.0",
  "streamlit>=1.32",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
